--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "------ ## Проектная работа Косяченко Владислава ------ ### **Используемые техники и технологии** * Организация структуры файлов и написание стилей по БЭМ * Разработка интерфейса для разных устройств * Манипуляция с классами CSS * Работа с JavaScript * Работа с переполненными блоками",
   "main": "index.js",
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
     "autoprefixer": "^10.4.13",
+    "babel-loader": "^9.1.2",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
     "cssnano": "^5.1.14",
     "html-webpack-plugin": "^5.5.0",
@@ -15,7 +19,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "scripts": {
-    "build": "rimraf dist && webpack",
+    "test": "rimraf dist && webpack",
     "serve": "webpack serve"
   },
   "repository": {
@@ -28,5 +32,8 @@
   "bugs": {
     "url": "https://github.com/bismor/mesto/issues"
   },
-  "homepage": "https://github.com/bismor/mesto#readme"
+  "homepage": "https://github.com/bismor/mesto#readme",
+  "dependencies": {
+    "core-js": "^3.27.1"
+  }
 }
