--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "webpack-dev-server": "^4.11.1"
   },
   "scripts": {
-    "test": "rimraf dist && webpack",
-    "serve": "webpack serve"
+    "build": "rimraf dist && webpack --mode production",
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
